--- a/Catalogo.html
+++ b/Catalogo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -51,7 +51,7 @@
         <!-- Aquí empieza el catálogo de perritos -->
 
         <br>
-        <h4 id="scrollsPerros">PERROS</h4>
+        <h3 id="scrollsPerros"><strong>PERROS</strong></h3>
         <br>
 
         <div class="card-container1">
@@ -260,18 +260,18 @@
         <br>
         <p>Aquí podrás encontrar información sobre cómo cuidar a tu peludo.</p>
 
-<!-- ARIA -->
+        <!-- ARIA -->
         <span tabindex="0" role="link"
             onclick="goToLink(event, 'https://cobee.io/blog/cuidados-perros-guia-completa-bienetar-canino/')"
             onkeydown="goToLink(event, 'https://cobee.io/blog/cuidados-perros-guia-completa-bienetar-canino/')">
             Cuidados para perros: guía completa para el bienestar canino </span>
-<!-- ARIA -->
+        <!-- ARIA -->
 
         <br>
         <!-- Aquí empieza el catálogo de gatitos -->
- 
+
         <br>
-        <h4 id="scrollsGatos">GATOS</h4>
+        <h3 id="scrollsGatos"><strong>GATOS</strong></h3>
         <br>
 
         <div class="card-container2">
@@ -481,20 +481,19 @@
         <br>
         <p>Aquí podrás encontrar información sobre cómo cuidar a tu gatito.</p>
 
-        <!--ARIA-->
+        <!-- ARIA -->
+        <span tabindex="0" role="link"
+            onclick="goToLink(event, 'https://www.kiwoko.com/blogmundoanimal/gatos-sus-cuidados-y-necesidades/?srsltid=AfmBOooHhqkYYUH-kRIzc-sc02JqtiH63HpmBcxRWHeSzmU--fxECFRC')"
+            onkeydown="goToLink(event, 'https://www.kiwoko.com/blogmundoanimal/gatos-sus-cuidados-y-necesidades/?srsltid=AfmBOooHhqkYYUH-kRIzc-sc02JqtiH63HpmBcxRWHeSzmU--fxECFRC')">
+            Gatos, sus cuidados y necesidades </span>
+        <!-- ARIA -->
 
-        
-        <!--ARIA-->
-        <!--<p><a class="link-opacity-100"
-                href="https://www.kiwoko.com/blogmundoanimal/gatos-sus-cuidados-y-necesidades/?srsltid=AfmBOooHhqkYYUH-kRIzc-sc02JqtiH63HpmBcxRWHeSzmU--fxECFRC">Gatos,
-                sus cuidados y necesidades</a>
-        </p>-->
-
+        <br>
 
         <!-- Aquí empieza el catálogo de otros animalitos -->
 
         <br>
-        <h4 id="scrollsOtros">OTROS</h4>
+        <h3 id="scrollsOtros"><strong>OTROS</strong></h3>
         <br>
 
         <div class="card-container3">
