--- a/Voluntariado.html
+++ b/Voluntariado.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -15,18 +15,26 @@
 
 <body>
 
-    <h2>Lista de voluntariado</h2>
+    <h1>V O L U N T A R I A D O</h1>
 
+    <p>
+
+        Si ninguno de estos horarios se ajusta a tu disponibilidad,
+        <br> pero deseas colaborar o realizar una donación, 
+        <br>no dudes en llamarnos al 312 155 1478. 
+        <br>¡Estaremos encantados de llegar a un acuerdo contigo!
+    </p>
+    <p>
+        Para participar contáctanos al correo rescatame@gmail.com
+    </p>
+    <br>
     <!-- ARIA -->
 
     <div role="table" aria-label="Students" aria-describedby="students_table_desc">
-        <div id="students_table_desc">Estos horarios son únicos, pero si gustas ayudar o traer cosas puedes visitarnos
-            sabado y domingo en cualquier horario, o entre semana llamandonos por teléfono.</div>
         <div role="rowgroup">
             <div role="row">
                 <span role="columnheader">Puesto</span>
                 <span role="columnheader">Experiencia</span>
-                <span role="columnheader">Paga</span>
                 <span role="columnheader">Horario</span>
                 <span role="columnheader">Descripción</span>
             </div>
@@ -34,40 +42,34 @@
         <div role="rowgroup">
             <div role="row">
                 <span role="cell">Veterinario</span>
-                <span role="cell">Estudiante en veterinaria</span>
-                <span role="cell">$300 al día</span>
-                <span role="cell">Lunes, miércoles, viernes de 9am a 13pm </span>
+                <span role="cell">Estudiante de veterinaria</span>
+                <span role="cell">Lunes y miércoles de 9am a 12pm </span>
                 <span role="cell">Ayudar en la revisión de salud de los animalitos.</span>
             </div>
             <div role="row">
                 <span role="cell">Veterinario</span>
                 <span role="cell">Médico veterinario</span>
-                <span role="cell">$500 al día</span>
-                <span role="cell">Martes y jueves de 9am a 13pm </span>
-                <span role="cell">Revisión de los animalitos.</span>
+                <span role="cell">Martes y jueves de 9am a 12pm </span>
+                <span role="cell">Revisión y diagnóstico de los animalitos.</span>
             </div>
             <div role="row">
                 <span role="cell">Ayudante</span>
                 <span role="cell">No</span>
-                <span role="cell">$400 al día</span>
-                <span role="cell">Lunes, miércoles, viernes de 14 pm a 20 pm </span>
+                <span role="cell">Lunes y miércoles de 16 pm a 19 pm </span>
                 <span role="cell">Bañar y limpiar a los animalitos.</span>
             </div>
             <div role="row">
                 <span role="cell">Ayudante</span>
                 <span role="cell">No</span>
-                <span role="cell">$400 al día</span>
-                <span role="cell">Martes y jueves de 14 pm a 20 pm </span>
-                <span role="cell">Limpoar las áreas donde están los animalitos.</span>
+                <span role="cell">Martes y jueves de 16 pm a 19 pm </span>
+                <span role="cell">Limpiar las áreas donde están los animalitos.</span>
             </div>
         </div>
     </div>
     <!-- ARIA -->
 
-
-
-    <p>Si estas interesado en ser parte de esta comunidad háznoslo saber mandando un correo a blabla@gmail.com o
-        marcando al 312 102 5520</p>
+    <br>
+    <p>Esta información es actualizada cada 2 semanas.</p>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
