--- a/rescatame.html
+++ b/rescatame.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -19,7 +19,7 @@
     <ul class="nav justify-content-center nav-background">
 
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Catalogo.html">Catalogo de animales</a>
+            <a class="nav-link active" aria-current="page" href="Catalogo.html">Animalitos</a>
         </li>
 
         <li class="nav-item">
@@ -35,96 +35,154 @@
     <br>
 
     <h1>¡Bienvenid@ a rescátame!</h1>
-    CAMBIOSSSSSSS
 
-    <p>
-        Somos rescátame, una asociación sin fines de lucro que se dedica al rescate y cuidado de animales callejeros.
-    </p>
+    <br>
 
-    <h3>
-        Acerca de rescátame
-    </h3>
+    <div class="card mb-3">
+        <div class="row g-0 align-items-center">
+            <!-- Columna de imagen -->
+            <div class="col-md-3">
+                <img src="RESCATAME.png" class="img-fluid rounded-start" alt="Logo">
+            </div>
 
-    <p>
-        Rescátame es un espacio dedicado a cambiar la vida de miles de animales en situación de vulnerabilidad. Creemos
-        que
-        todos los seres vivos merecen una segunda oportunidad, un hogar lleno de amor y cuidados. A través de nuestra
-        plataforma, conectamos a animales rescatados con personas responsables y cariñosas que buscan transformar sus
-        vidas
-        adoptando un nuevo miembro de la familia.
+            <!-- Columna de texto -->
+            <div class="col-md-4">
+                <div class="card-body">
+                    <h2 class="card-title"><strong>Acerca de nosotros</strong></h2>
+                    <p class="card-text">
+                        Rescátame es un espacio dedicado a cambiar la vida de miles de animales en situación de
+                        vulnerabilidad. Creemos que todos los seres vivos merecen una segunda oportunidad, un hogar
+                        lleno de amor y cuidados.
+                        A través de nuestra plataforma, conectamos a animales rescatados con personas responsables y
+                        cariñosas que buscan transformar sus vidas adoptando un nuevo miembro de la familia.
+                    </p>
+                </div>
+            </div>
 
-    </p>
+            <!-- Columna de video -->
+            <div class="col-md-5">
+                <div class="video-container">
 
-    <h3>
-        Nuestra misión
-    </h3>
+                    <iframe src="https://www.youtube.com/embed/2T-Q2o4n1MM" title="Video sobre accesibilidad en Rescátame" width="560"
+                        height="315" frameborder="0" allowfullscreen>
+                    </iframe>
+                    <!--<iframe src="https://www.youtube.com/embed/2T-Q2o4n1MM" allowfullscreen></iframe>-->
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <p>
-        Promover la adopción responsable de animales en situación de calle o abandono, proporcionando un hogar donde
-        puedan vivir con dignidad y felicidad. También trabajamos en concienciar a la sociedad sobre la importancia del
-        respeto, cuidado y bienestar animal.
-    </p>
+    <br>
 
-    <h3>
-        Nuestra visión
-    </h3>
+    <div class="card">
+        <div class="card-header">
+            <h3>
+                Misión
+            </h3>
+        </div>
+        <div class="card-body">
+            <blockquote class="blockquote mb-0">
+                <p>
+                    Promover la adopción responsable de animales en situación de calle o abandono,
+                    proporcionando un hogar donde puedan vivir con dignidad y felicidad. Trabajamos en concienciar a
+                    la sociedad sobre la importancia del respeto, cuidado y bienestar animal.
+                </p>
+            </blockquote>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+        <div class="card-header">
+            <h3>
+                Visión
+            </h3>
+        </div>
+        <div class="card-body">
+            <blockquote class="blockquote mb-0">
+                <p>
+                    Ser un referente en la creación de una comunidad compasiva y activa, donde ningún animal
+                    tenga que sufrir por falta de cuidados, y donde la adopción sea la primera opción al
+                    considerar sumar un compañero de vida.
+                </p>
+            </blockquote>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="card">
+        <div class="card-header">
+            <h3>
+                Valores
+            </h3>
+        </div>
+        <div class="card-body">
+            <blockquote class="blockquote mb-0">
+                <p>
+                    <strong>- Compasión: </strong>
+                    Nos mueve el amor y el respeto por los animales.
+                    <br>
+                    <strong>- Responsabilidad:</strong>
+                    Promovemos la adopción consciente y el compromiso de ofrecer un hogar seguro.
+                    <br>
+                    <strong>- Colaboración:</strong>
+                    Trabajamos junto a voluntarios, donantes y organizaciones para maximizar nuestro impacto.
+                    <br>
+                    <strong>- Transparencia:</strong>
+                    Garantizamos procesos claros y honestos en cada paso de la adopción.
+                </p>
+            </blockquote>
+        </div>
+    </div>
+    <br>
+    <br>
 
-    <p>
-        Ser un referente en la creación de una comunidad compasiva y activa, donde ningún animal tenga que sufrir por
-        falta de cuidados, y donde la adopción sea la primera opción al considerar sumar un compañero de vida.
-    </p>
+    <div class="card mb-3">
+        <div class="row g-0 align-items-center text-center">
 
-    <h3>
-        Nuestros valores
-    </h3>
+            <!-- Columna de texto izquierda -->
+            <div class="col-md-4 d-flex justify-content-center align-items-center">
+                <div class="card-body">
+                    <h4 class="card-title"><strong>Servicios que ofrecemos</strong></h4>
+                    <p class="card-text">
+                        <strong>- Adopción: </strong>
+                        Lista de animales disponibles, con información sobre su salud, edad y
+                        comportamiento.
+                        <br>
+                        <strong>- Voluntariado: </strong>
+                        Oportunidades para unirse a nuestra causa, desde rescates hasta cuidados temporales.
+                        <br>
+                        <strong>- Donaciones: </strong>
+                        Espacios seguros para contribuir económicamente y apoyar nuestro trabajo.
+                    </p>
+                </div>
+            </div>
 
-    <p>
-        - Compasión: Nos mueve el amor y el respeto por los animales.
-        <br>
-        - Responsabilidad: Promovemos la adopción consciente y el compromiso de ofrecer un hogar seguro.
-        <br>
-        - Colaboración: Trabajamos junto a voluntarios, donantes y organizaciones para maximizar nuestro impacto.
-        <br>
-        - Transparencia: Garantizamos procesos claros y honestos en cada paso de la adopción.
-        <br>
-        - Educación: Impulsamos iniciativas que fomenten el respeto y la empatía hacia los animales.
-    </p>
+            <!-- Columna de foto -->
+            <div class="col-md-3 d-flex justify-content-center align-items-center">
+                <img src="resc.png" class="img-fluid rounded-start"
+                    alt="Porque ayudar es uno de los propósitos más bellos de vivir.">
+            </div>
 
-    <h3>
-        Servicios que ofrecemos
-    </h3>
+            <!-- Columna de texto derecha -->
+            <div class="col-md-4 d-flex justify-content-center align-items-center">
+                <div class="card-body">
+                    <h4 class="card-title"><strong>¿Por qué adoptar en rescátame?</strong></h4>
+                    <p class="card-text">
+                        Cuando eliges adoptar, no solo estás salvando una vida, sino también cambiando la tuya. Cada
+                        animal rescatado tiene una historia, y en Rescátame creemos en darles un final feliz. Te
+                        acompañamos
+                        en el proceso para asegurar que tanto tú como tu nuevo amigo tengan una transición exitosa y
+                        llena
+                        de amor.
+                    </p>
+                </div>
+            </div>
 
-    <p>
-        - Adopción: Una lista actualizada de animales disponibles, incluyendo información sobre su salud, edad y
-        comportamiento.
-        <br>
-        - Voluntariado: Oportunidades para unirse a nuestra causa, desde rescates hasta cuidados temporales.
-        <br>
-        - Donaciones: Espacios seguros para contribuir económicamente y apoyar nuestro trabajo.
-        <br>
-        - Educación: Talleres y recursos para fomentar el cuidado responsable y la prevención del abandono.
-        <br>
-    </p>
-
-    <h3>
-        ¿Por qué adoptar en rescátame?
-    </h3>
-
-    <p>
-        Cuando eliges adoptar, no solo estás salvando una vida, sino también cambiando la tuya. Cada animal rescatado
-        tiene una historia, y en Rescátame creemos en darles un final feliz. Te acompañamos en el proceso para asegurar
-        que tanto tú como tu nuevo amigo tengan una transición exitosa y llena de amor.
-    </p>
+        </div>
+    </div>
 
 
-
-
-    <h1>Paleta de Colores</h1>
-    <div class="color-box blue">Blue</div>
-    <div class="color-box blue-lighter">Lighter</div>
-    <div class="color-box blue-light">Light</div>
-    <div class="color-box blue-dark">Dark</div>
-    <div class="color-box blue-darker">Darker</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
