--- a/rescatame.html
+++ b/rescatame.html
@@ -42,7 +42,7 @@
         <div class="row g-0 align-items-center">
             <!-- Columna de imagen -->
             <div class="col-md-3">
-                <img src="RESCATAME.png" class="img-fluid rounded-start" alt="Logo">
+                <img src="RESCATAME.png" class="img-fluid rounded-start" alt="">
             </div>
 
             <!-- Columna de texto -->
@@ -62,12 +62,18 @@
             <!-- Columna de video -->
             <div class="col-md-5">
                 <div class="video-container">
+                    <iframe 
+                    src="https://www.youtube.com/embed/HOs6sj7oKbs" 
+                    title="Video sobre accesibilidad en Rescátame" 
+                    width="560" 
+                    height="315" 
+                    frameborder="0" 
+                    allowfullscreen>
+                </iframe>
 
-                    <iframe src="https://www.youtube.com/embed/2T-Q2o4n1MM" title="Video sobre accesibilidad en Rescátame" width="560"
-                        height="315" frameborder="0" allowfullscreen>
-                    </iframe>
                     <!--<iframe src="https://www.youtube.com/embed/2T-Q2o4n1MM" allowfullscreen></iframe>-->
                 </div>
+                <a href="Subtitulos.html">Text description</a>
             </div>
         </div>
     </div>
